welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:46: error: ')' expected but 'for' found.
  for (k <- 1 to 3) {
  ^